# lexi

./: .drone.yml  CMakeLists.txt  LICENSE.md  README.md
include/lexi/: bool.hpp  char.hpp  enum.hpp  float.hpp  int.hpp  lexi.hpp  null.hpp
include/lexi/detail/: architecture.hpp  bigint.hpp  define.hpp  diyfp.hpp  dtoa.hpp  fmt.hpp  ieee754.hpp  itoa.hpp  pow.hpp  string.hpp  strtod.hpp  type.hpp
src/: bool.cpp  char.cpp  float.cpp  int.cpp  lexi.cpp  null.cpp
src/detail/: bigint.cpp  diyfp.cpp  dtoa.cpp  ieee754.cpp  itoa.cpp  pow.cpp  string.cpp  strtod.cpp
test/: bool.cpp  char.cpp  enum.cpp  float.cpp  int.cpp  lexi.cpp  null.cpp
